# worldcup_prediction_2026

./: .gitignore  README.ko.md  README.md  app.py  evaluate_model.py  fetch_calibration_data.py  fetch_data.py  fetch_injuries.py  fetch_schedule.py  fetch_suspensions.py  main.py  predict_match.py  pyproject.toml  requirements.txt  validate_data.py
.agents/: AGENTS.md
.github/workflows/: ci.yml
data/: absences.json  actual_results.json  elo_ratings.json  elo_ratings_pre_tournament.json  fifa_rankings.json  groups.json  injuries.json  model_calibration_matches.json  schedule.json  squads.json  team_conduct_scores.json  third_place_annex_c.json
src/: __init__.py  absences.py  bracket.py  data_validation.py  elo.py  evaluation.py  factory.py  forecast.py  io_utils.py  model_config.py  paths.py  poisson.py  schedule.py  simulation.py  tournament_state.py
tests/: __init__.py  test_app.py  test_data_validation.py  test_elo.py  test_evaluation.py  test_fetch_data.py  test_fetch_injuries.py  test_forecast.py  test_poisson.py  test_simulation.py  test_suspensions.py  test_tournament_state.py
