[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-prediction-2026"
version = "0.2.0"
description = "Elo and Poisson based FIFA World Cup 2026 tournament simulator"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "beautifulsoup4==4.15.0",
  "httpx==0.28.1",
  "numpy==2.4.4",
  "pandas==3.0.3",
  "streamlit==1.58.0",
]

[tool.setuptools]
py-modules = [
  "app",
  "evaluate_model",
  "fetch_calibration_data",
  "fetch_data",
  "fetch_injuries",
  "fetch_schedule",
  "fetch_suspensions",
  "main",
  "predict_match",
  "validate_data",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
